# ffaudio

./: .gitignore  CMakeLists.txt  DEPS  README.md  build_ffmpeg.sh  codeformat.sh
include/: ffaudio.h
scripts/: build_ffmpeg_mac.sh  build_ffmpeg_win.sh
src/: ffaudio.cpp
src/AudioMuxerImpl/: AudioMuxerImpl.cpp  AudioMuxerImpl.h
